[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/weapon/cannon/Cannon.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/cannon.png" type="Texture" id=2]
[ext_resource path="res://src/overlay/Hurtbox.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 13.0
height = 12.0

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="CapsuleShape2D" id=3]
radius = 12.0
height = 12.0

[node name="Cannon" type="StaticBody2D"]
collision_mask = 64
script = ExtResource( 1 )
damage = 3
repetition = 5

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -3 )
scale = Vector2( 0.625, 0.625 )
texture = ExtResource( 2 )
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlayerControl" type="Area2D" parent="."]
position = Vector2( -26, 1 )
collision_layer = 16
collision_mask = 0
monitoring = false
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerControl"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_mask = 64

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, 2 )
rotation = 1.5708
shape = SubResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]
